# QuantumEnergyOS-V.02

./: .env.example  App.tsx  Dashboard.tsx  GridBalance.tsx  LICENSE  Quartz4D.tsx  README.md  frontend.html  package.json  requirements.txt  server.py
AppData/Local/Programs/Microsoft VS Code/quantumspaceos/scripts/: build_iso.ps1  git_commands.md
AppData/Local/Programs/Microsoft VS Code/quantumspaceos/src/: antigrav_bridge.rs
AppData/Local/Programs/Microsoft VS Code/quantumspaceos/src/api/: telemetry_api.py
AppData/Local/Programs/Microsoft VS Code/quantumspaceos/src/flight-sim/: orbital_mechanics.rs
AppData/Local/Programs/Microsoft VS Code/quantumspaceos/src/photonicq-bridge/: Cargo.toml
AppData/Local/Programs/Microsoft VS Code/quantumspaceos/src/photonicq-bridge/src/: Cargo.toml  lib.rs  qaoa_optimize.py
api/: server.py
extracted/QuantumEnergyOS-V.02-main/: .gitignore  LICENSE  README.md  core.py  detector_apagones.py
extracted/QuantumEnergyOS-V.02-main/AppData/Local/Programs/Microsoft VS Code/QuantumEnergyOS/api/: server.py
extracted/QuantumEnergyOS-V.02-main/AppData/Local/Programs/Microsoft VS Code/quantumspaceos/: LICENSE  README.md
extracted/QuantumEnergyOS-V.02-main/AppData/Local/Programs/Microsoft VS Code/quantumspaceos/scripts/: run_qemu.ps1
extracted/QuantumEnergyOS-V.02-main/AppData/Local/Programs/Microsoft VS Code/quantumspaceos/src/photonicq-bridge/src/: antigrav_bridge.rs  main.rs
extracted/QuantumEnergyOS-V.02-main/photonic-bridge/src/: lib.rs
extracted/QuantumEnergyOS-V.02-main/photonic-core/src/: lib.rs
photonic-core/src/: energy_optimizer.rs
