# ╔══════════════════════════════════════════════════════════════════════════╗
# ║  antigrav-bridge — QuantumEnergyOS V.02                                 ║
# ║  Módulo EHD Biefeld-Brown + QAOA + Control Fotónico MZI                 ║
# ║  Desde Mexicali, BC — Kardashev 0→1                                     ║
# ╚══════════════════════════════════════════════════════════════════════════╝
#
# INTEGRACIÓN AL WORKSPACE (agregar en el Cargo.toml raíz):
#   [workspace]
#   members = [
#       ...
#       "antigrav-bridge",   # ← añadir esta línea
#   ]
#
# [workspace.dependencies] — estos ya existen, solo verificar versiones:
#   nalgebra    = { version = "0.33", default-features = false, features = ["libm"] }
#   num-complex = { version = "0.4",  default-features = false }
#   serde       = { version = "1.0",  default-features = false, features = ["derive"] }

[package]
name        = "antigrav-bridge"
version     = "0.2.0"
edition     = "2021"
authors     = ["Giovanny Anthony Corpus Bernal <github.com/GioCorpus>"]
description = "Simulación EHD Biefeld-Brown + optimización QAOA + control fotónico MZI"
license     = "MIT"
repository  = "https://github.com/GioCorpus/QuantumEnergyOS"

# ── Features ────────────────────────────────────────────────────────────────
[features]
default = []

# Habilita el POST HTTP al dashboard Flask (localhost:5000/api/antigrav)
# Activar con: cargo run --features dashboard
dashboard = ["dep:reqwest"]

# Habilita el subprocess a Python/Qiskit-Aer para QAOA real
# Requiere: pip install qiskit qiskit-aer numpy
# Activar con: cargo run --features qiskit-subprocess
qiskit-subprocess = []

# ── Dependencias ─────────────────────────────────────────────────────────────
[dependencies]
# Álgebra vectorial 3D — compartida con el workspace
# NOTA: usamos features = ["libm", "std"] aquí porque este crate es userspace (std).
# El kernel usa features = ["libm"] (sin_std). Ver workspace Cargo.toml raíz.
nalgebra    = { version = "0.33", default-features = false, features = ["libm", "std"] }

# Números complejos para el vector de estado cuántico QAOA
num-complex = { version = "0.4", default-features = false, features = ["std"] }

# Serialización JSON para telemetría y subprocess Qiskit
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP al dashboard (opcional, feature "dashboard")
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

# ── Binarios ─────────────────────────────────────────────────────────────────
[[bin]]
name = "antigrav-demo"
path = "src/main.rs"

[lib]
name = "antigrav_bridge"
path = "src/antigrav_bridge.rs"

# ── Perfil release heredado del workspace ─────────────────────────────────────
# (se toma automáticamente del workspace si este crate es miembro)
